<resources>
    <string name="app_name">RatTrackerApp</string>
    <!-- Sign in/Sign up-->
    <string name="facebook_app_id">1924821827835954</string>
    <string name="fb_login_protocol_scheme">fb1924821827835954</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_log_in">Log In</string>
    <string name="button_log_out">Log Out</string>
    <string name="button_reset_password">Reset your Password</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_forgot_password">Forgot your password? Click here!</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="end_date_greater_start_date">The end date must be after the start date</string>
    <string name="date_select_instructions">Select a start and end date of sightings to display</string>
    <string name="start_date">Start Date: </string>
    <string name="end_date">End Date: </string>
    <string name="description_center_pin">center pin</string>
    <string name="description_app_logo">app logo</string>
    <string name="description_clock">clock</string>
    <string name="amixx_xx_soluxxxx">Amixx XX Soluxxxx</string>
    <string name="description_flag_logo">flag logo</string>
    <string name="description_city_logo">city logo</string>
    <string name="description_globe_logo">globe logo</string>
    <string name="date_label">Date: %s</string>
    <string name="address_label">Address: %s</string>
    <string name="city_label">City: %s</string>
    <string name="borough_label">Borough: %s</string>
    <string name="lat_label">Latitude: %s</string>
    <string name="long_label">Longitude: %s</string>

    <!-- Report Sightings -->
    <string name="reportAddress">Address</string>
    <string name="reportCity">City</string>
    <string name="reportZip">Zip Code</string>
    <string name="reportDate">Date</string>
    <string name="reportSightingMap">REPORT A RAT</string>
    <string name="reportLocationType">Location Type</string>
    <string name="key">id</string>
    <!-- Authentication failures -->
    <string name="auth_failed">Failed to create new account</string>
    <string name="password_match_fail">Passwords do not match</string>
    <string name="sign_in_failed">Account does not exist</string>
    <string name="sign_in_empty">Email or password were empty</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="info_card_borough">Borough</string>
    <string name="info_card_long">Longitude</string>
    <string name="info_card_lat">Latitude</string>

    <string-array name="accountTypes">
        <item>User</item>
        <item>Admin</item>
    </string-array>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_reports_sightings">Reports_sightings</string>
</resources>
