<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lead.rattrackerapp.StartScreen"
    android:layout_weight="1">

    <ImageView
        android:src="@drawable/ratwatch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:contentDescription="@string/description_app_logo">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/input_label_padding_bottom"
            android:paddingLeft="@dimen/input_label_padding_horizontal"
            android:paddingRight="@dimen/input_label_padding_horizontal"
            android:paddingTop="@dimen/input_label_padding_top"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:maxLines="1"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/reset_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aa0000"
            android:gravity="center"
            android:layout_marginLeft="@dimen/input_label_padding_horizontal"
            android:layout_marginRight="@dimen/input_label_padding_horizontal"
            android:text="@string/button_reset_password" />
    </LinearLayout>
</LinearLayout>
