<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/reportLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        android:paddingTop="@dimen/input_label_padding_top"
        android:ems="10"
        android:textSize="30sp"
        android:text="@string/reportSighting" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/report_label_padding_bottom"
        android:paddingLeft="@dimen/report_label_padding_horizontal"
        android:paddingRight="@dimen/report_label_padding_horizontal"
        android:paddingTop="@dimen/report_label_padding_top">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addressReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reportAddress"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/report_label_padding_bottom"
        android:paddingLeft="@dimen/report_label_padding_horizontal"
        android:paddingRight="@dimen/report_label_padding_horizontal"
        android:paddingTop="@dimen/report_label_padding_top">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cityReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reportCity"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/report_label_padding_bottom"
        android:paddingLeft="@dimen/report_label_padding_horizontal"
        android:paddingRight="@dimen/report_label_padding_horizontal"
        android:paddingTop="@dimen/report_label_padding_top">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cityZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reportZip"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/report_label_padding_bottom"
        android:paddingLeft="@dimen/report_label_padding_horizontal"
        android:paddingRight="@dimen/report_label_padding_horizontal"
        android:paddingTop="@dimen/report_label_padding_top">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dateReportReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reportDate"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingLeft="@dimen/report_label_padding_horizontal"
        android:paddingRight="@dimen/report_label_padding_horizontal"
        android:paddingTop="@dimen/report_label_padding_top">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/timeReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reportTime"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/input_label_padding_horizontal"
        android:layout_marginRight="@dimen/input_label_padding_horizontal"
        android:orientation="horizontal">

        <Button
        android:id="@+id/submitReport"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/submit" />

        <Button
        android:id="@+id/cancelReport"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/cancel" />

        </LinearLayout>

</LinearLayout>