<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lead.rattrackerapp.SignUpScreen">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/input_label_padding_bottom"
        android:paddingLeft="@dimen/input_label_padding_horizontal"
        android:paddingRight="@dimen/input_label_padding_horizontal"
        android:paddingTop="@dimen/input_label_padding_top"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_email_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:maxLines="1"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/input_label_padding_bottom"
        android:paddingLeft="@dimen/input_label_padding_horizontal"
        android:paddingRight="@dimen/input_label_padding_horizontal"
        android:paddingTop="@dimen/input_label_padding_top"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_password_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_confirm_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/input_label_padding_bottom"
        android:paddingLeft="@dimen/input_label_padding_horizontal"
        android:paddingRight="@dimen/input_label_padding_horizontal"
        android:paddingTop="@dimen/input_label_padding_top"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_password_confirm_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/input_label_padding_horizontal"
        android:layout_marginRight="@dimen/input_label_padding_horizontal">

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Cancel" />

        <Button
            android:id="@+id/signUpConfirmButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Sign Up" />
    </LinearLayout>

</LinearLayout>
